# GL_Model_Scene

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: materials.txt
src/glm/: glm.cpp  glm.h
src/modelMover/: modelMover.cpp  modelMover.h
src/modelwork/: modelObj.cpp  modelObj.h
src/trackball/: trackball.cpp  trackball.h
